# intelligent-model-router

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_evaluation_tables.py
app/: __init__.py  config.py  db.py  main.py  seed.py
app/api/: deps.py
app/api/v1/: __init__.py  admin.py  evaluations.py  inference.py  models.py
app/models/: __init__.py  entities.py
app/modules/: __init__.py
app/modules/audit/: __init__.py
app/modules/authentication/: __init__.py  service.py
app/modules/billing/: __init__.py
app/modules/evaluations/: __init__.py  dataset_cases.py  scoring.py  service.py
app/modules/inference/: __init__.py  service.py
app/modules/observability/: __init__.py
app/modules/providers/: __init__.py  base.py  mock_adapters.py  registry.py
app/modules/routing/: __init__.py  engine.py  features.py
app/modules/validation/: __init__.py  response.py
app/schemas/: __init__.py  admin.py  evaluations.py  inference.py  models.py
docs/: API.md  ARCHITECTURE.md  PRODUCT_SPEC.md  README.md  STATUS.md
frontend/: .env.example  Dockerfile  README.md  index.html
frontend/src/: App.tsx  auth.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/hooks/: useApiQuery.ts
frontend/src/pages/: ClientsPage.tsx  DashboardPage.tsx  EvaluationsPage.tsx  (+4 more)
tests/: test_auth.py  test_evaluations.py  test_routing.py  test_validation.py
